--- a/html/index.html
+++ b/html/index.html
@@ -4,30 +4,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a sketch project</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
         <h1>Etch-A-Sketch</h1>
         <div class="container">
         <div class="left">
             <div >
-                <button id="color_picker"></button>
+                <button class="btn-circular"id="color_picker"></button>
                 <h4>Color picker</h4>
             </div>
             <div>
-                <button id="clear">
+                <button class ="btn" id="clear">
                     Clear
                 </button>
             </div>
             <div>
-                <button id="Eraser">Eraser</button>
+                <button class="btn" id="Eraser">Eraser</button>
             </div>
             <div>
                 <h4>Grid Size</h4>
                 <div class="button_grid">
-                    <button>8&times8</button>
-                    <button>16&times16</button>
-                    <button>32&times32</button>
-                    <button>64&times64</button>
+                    <button class="btn ">8&times8</button>
+                    <button class="btn">16&times16</button>
+                    <button class="btn">32&times32</button>
+                    <button class="btn">64&times64</button>
                 </div>
             </div>
             <div>
@@ -37,21 +38,26 @@
         <div class="right">
             <div class="frame">
                 <div class="screen"></div>
+                <div class="circles">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
             </div>
         </div>
+        
+        </div>
+        </div>
+        </div>
         <div class="colorPickerModal">
-        <h4>Select a Color</h4>
-        <div class="gridPicker">
-            <div class="red"></div>
-            <div class="blue"></div>
-            <div class="orange"></div>
-            <div class="yellow"></div>
-            <div class="purple"></div>
-            <div class="black"></div>
-            <div class="green"></div>
-            <div class="brown"></div>
-        </div>
-        </div>
-        </div>
+            <h4>Select a Color</h4>
+            <div class="gridPicker">
+                <div class="red"></div>
+                <div class="blue"></div>
+                <div class="orange"></div>
+                <div class="yellow"></div>
+                <div class="purple"></div>
+                <div class="black"></div>
+                <div class="green"></div>
+                <div class="brown"></div>
 </body>
 </html>
